--- a/frontend/src/views/auths/authsStyle.css
+++ b/frontend/src/views/auths/authsStyle.css
@@ -1,3 +1,26 @@
+.Social-btns {
+    border-radius: 25px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    cursor: pointer;
+    outline: 4px auto -webkit-focus-ring-color;
+}
+
+.Signin-socials-btn{
+    border: none;
+    outline: none;
+    border-radius: 25px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    cursor: pointer;
+}
+
 /* Register styles below */
 
 
@@ -5,3 +28,19 @@
 
 
 /* Login styles below */
+
+
+
+
+
+/* welcome styles here */
+.Welcome{
+    width: 330px;
+    height: 460px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Social-Icons{
+    color: #fff;
+}
