--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  font-size: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 100%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  html {
+    font-size: 95%;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  html {
+    font-size: 75%;
+  }
+  .Info-box{
+    height: 6rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  html {
+    font-size: 70%;
+  }
+}
+
+
+
+
 /* a {
   font-weight: 500;
   color: #646cff;
