--- a/frontend/src/views/navigations/TestStyles.css
+++ b/frontend/src/views/navigations/TestStyles.css
@@ -45,3 +45,51 @@
    object-fit: contain;
    border-radius: 8px; 
 }
+.Switch1,.Switch2{
+    display: inline-block;
+    position: relative;
+    width: 45px;
+    height: 23px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.Switch1 input,.Switch2 input{
+    opacity: 0;
+    height: 0;
+    width: 0;
+}
+.Slider{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: pointer;
+    background-color: #ccc;
+    transition: 0.5s ease-in-out;
+}
+.Slider:before{
+    position: absolute;
+    content: '';
+    width: 15px;
+    height: 15px;
+    left: 4px;
+    bottom: 4px;
+    background: #fff;
+    transition: 0.4s ease-in-out;
+    border-radius: 50%;
+}
+input:checked + .Slider{
+    background: #545454;
+}
+
+input:checked + .Slider:before{
+    transform: translateX(22px);
+}
+.Post-submit{
+    border-radius: 8px;
+}
+/* drawer */
+.custom-drawer .MuiDrawer-paper {
+    height: 50vh;
+}
