--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+input, textarea{
+  outline: none;
+  border: none;
+}
+/* input, textarea{
+  outline: none;
+  border: none;
+} */
 
 html {
   font-size: 100%;
