--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,3 +4,15 @@
   padding: 2rem;
   text-align: center;
 }
+input, textarea{
+  outline: none;
+  border: none;
+}
+input:focus, textarea:focus {
+  outline: none;
+  border: none;
+}
+input:hover, textarea:hover {
+  outline: none;
+  border: none;
+}
