--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,6 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
   background-color: #fff;
   font-synthesis: none;
@@ -15,6 +14,11 @@
 input, textarea{
   outline: none;
   border: none;
+}
+input:focus, textarea:focus {
+  outline: none;
+  border: none;
+  border-width: none;
 }
 /* input, textarea{
   outline: none;
