--- a/frontend/src/views/profile/ProfileStyles.css
+++ b/frontend/src/views/profile/ProfileStyles.css
@@ -1,9 +1,13 @@
+.Profile-box{
+    box-shadow: 0 2px 20px rgb(0, 0, 0, 0.15);
+}
 .Profile{
     border-radius: 8px;
 }
 .Btns>button{
     border-radius: 8px;
     border: 2px solid black;
+    width: 10rem;
 }
 .Btns>button:nth-child(1){
     background: #000;
@@ -16,8 +20,16 @@
     border-bottom-right-radius: 8px;
 }
 .Profile-cover{
+    width: 100%;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+}
+.Profile-cover>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px; 
 }
 .Profile-User-Image{
     border: 2px solid #c6c6c6;
@@ -30,3 +42,36 @@
     object-fit: contain;
     border-radius: 50%; 
 }
+
+.TESTEST {
+    display: flex;
+    margin-top: 10px;
+    width: 100%;
+  }
+  
+  /* .TESTEST button {
+    margin-right: 10px;
+  } */
+  
+  .indicator-bar {
+    height: 2px;
+    background-color: #000;
+    width: 50%;
+  }
+  
+  .active-tab-2{
+    font-weight: bold;
+  }
+
+  .active-tab-1{
+    font-weight: bold;
+  }
+  
+  .tab-content-1 {
+    display: none;
+  }
+  
+  /* Show active tab content */
+  .tab-content-1[style*="block"] {
+    display: block;
+  }
