--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,14 +28,49 @@ input:focus, textarea:focus {
 html {
   font-size: 100%;
 }
-
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 900px){
   html {
     font-size: 100%;
   }
   .Navbar{
-    width: 100%;
+    width: 35rem;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
   }
+  .Home-Screen{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .shadowEffect-footer{
+    display: flex;
+    flex-direction: column;
+    background: red;
+    height: 200vh;
+    width: 15rem;
+    gap: 3rem;
+  }
+  .Home-page{
+    width: 35rem;
+    background: white;
+  }
+  .Home-page>section{
+    width: 100%;
+    height: calc(100vh - 130px);
+    padding-top: 20px;
+  }
+  .Profile-container{
+    width: 35rem;
+  }
+  .Profile-Nav{
+    width: 35rem;
+  }
+} */
+
+@media screen and (min-width: 900px) {
+  html {
+    font-size: 100%;
+  }
+  
   /* .Display-Tabs-Screen{
     
   } */
@@ -52,25 +87,117 @@ html {
   }
   .Home-Screen{
     display: flex;
+    gap: 10rem;
+  }
+  .shadowEffect-footer{
+    display: flex;
+    flex-direction: column;
+    background: red;
+    height: 70vh;
+    width: 15rem;
+    gap: 3rem;
+  }
+  .Home-cover{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .Home-page{
+    width: 28rem;
+    background: white;
+  }
+  .Navbar{
+    width: 27.8rem;
+  }
+  .Empty-display{
+    width: 10rem;
+  }
+  .Home-page>section{
+    width: 100%;
+    height: calc(100vh - 130px);
+    padding-top: 20px;
+  }
+  .Profile-container{
+    width: 35rem;
+  }
+  .Profile-Nav{
+    width: 35rem;
+  }
+}
+@media screen and (max-width: 889px) {
+  html {
+    font-size: 95%;
+  }
+  
+  /* .Display-Tabs-Screen{
+    
+  } */
+  .Welcome-Screen{
+    display: flex;
+    align-items: flex-start;
+  }
+  .Social-Logins-container{
+    display: flex;
     align-items: center;
     justify-content: center;
+    width: 50%;
+    height: 100vh;
+  }
+  .Home-Screen{
+    display: flex;
     gap: 20px;
   }
   .shadowEffect-footer{
     display: flex;
     flex-direction: column;
     background: red;
-    height: 100vh;
-    width: 30rem;
+    height: 70vh;
+    width: 15rem;
+    gap: 3rem;
+  }
+  .Home-cover{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
   }
   .Home-page{
-    width: 40rem;
+    width: 35rem;
+    background: white;
+  }
+  .Navbar{
+    width: 35rem;
+  }
+  .Empty-display{
+    display: none;
+  }
+  .Home-page>section{
+    width: 100%;
+    height: calc(100vh - 130px);
+    padding-top: 20px;
+  }
+  .Profile-container{
+    width: 35rem;
+  }
+  .Profile-Nav{
+    width: 35rem;
   }
 }
 
 @media screen and (max-width: 576px) {
   html {
     font-size: 95%;
+  }
+  .Navbar{
+    width: 100%;
+    left: 0;
+  }
+  .Profile-container{
+    width: 100vw;
+    background: white;
+  }
+  .Profile-Nav{
+    left: 0;
+    width: 100%;
   }
   .Welcome-Screen{
     display: flex;
@@ -90,13 +217,38 @@ html {
     align-items: center;
     justify-content: center;
   }
+  .Home-cover{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .Home-page{
+    width: 100vw;
+    background: white;
+  }
+  .Navbar{
+    width: 100%;
+    height: 50px;
+  }
+  .Home-page>section{
+    width: 100%;
+    height: calc(100vh - 120px);
+    padding-top: 0px;
+  }
   .shadowEffect-footer{
     display: flex;
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
     position: fixed;
+    background: #fff;
+    width: 100%;
+    height: 5.5rem;
     bottom: 0;
     left: 0;
+    box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.1);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
   }
   .tab-content-1{
     height: 67vh;
