--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 /* Resetting outline and border for input and textarea */
@@ -17,11 +18,15 @@ input, textarea{
   outline: none;
   border: none;
 }
-
 input:focus, textarea:focus {
   outline: none;
+  border: 1px solid transparent;
+  box-shadow: none;
+}
+
+input:hover, textarea:hover {
+  outline: none;
   border: none;
-  border-width: none;
 }
 
 /* Adjustments for various screen sizes */
@@ -74,10 +79,6 @@ input:focus, textarea:focus {
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.15);
   }
 
-  .Navbar {
-    width: 27.8rem;
-  }
-
   .Empty-display {
     width: 10rem;
   }
@@ -87,6 +88,11 @@ input:focus, textarea:focus {
     height: calc(100vh - 130px);
     padding-top: 0px;
   }
+  .Search-Container{
+    margin-left: 24rem;
+    width: 28rem;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.15);
+  }
 
   .Profile-container {
     margin-left: 24rem;
@@ -94,7 +100,7 @@ input:focus, textarea:focus {
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.15);
   }
 
-  .Profile-Nav {
+  .Navbar, .Profile-Nav, .Search-nav {
     width: 27.8rem;
   }
 
@@ -127,6 +133,9 @@ input:focus, textarea:focus {
 @media screen and (max-width: 889px) {
   html {
     font-size: 95%;
+  }
+  .Post-Modal{
+    width: 30rem;
   }
 
   .Welcome-Screen {
@@ -170,10 +179,6 @@ input:focus, textarea:focus {
     background: white;
   }
 
-  .Navbar {
-    width: 38rem;
-  }
-
   .Empty-display {
     display: none;
   }
@@ -188,12 +193,15 @@ input:focus, textarea:focus {
     width: 38rem;
   }
 
-  .Profile-Nav {
+  .Navbar, .Search-nav, .Profile-Nav {
     width: 38rem;
   }
 
   .Profile-box-container {
     width: 100%;
+  }
+  .Search-Container{
+    width: 38rem;
   }
   /* .Display-Tabs-Screen{
     display: flex;
@@ -210,9 +218,13 @@ input:focus, textarea:focus {
     height: 100vh;
   }
 
-  .Navbar {
+  .Navbar, .Search-nav, .Profile-Nav {
     width: 100%;
+    height: 60px;
     left: 0;
+  }
+  .Search-Container{
+    width: 100vw;
   }
 
   .Profile-container,
@@ -222,11 +234,6 @@ input:focus, textarea:focus {
     min-height: 100vh;
   }
 
-  .Profile-Nav {
-    width: 100%;
-    height: 60px;
-    left: 0;
-  }
 
   .Welcome-Screen {
     display: flex;
@@ -291,6 +298,18 @@ input:focus, textarea:focus {
 
   .tab-content-1 {
     height: 66vh;
+  }
+  input, textarea{
+    outline: none;
+    border: none;
+  }
+  input:focus, textarea:focus {
+    outline: none;
+    border: none;
+  }
+  input:hover, textarea:hover {
+    outline: none;
+    border: none;
   }
 }
 
