--- a/frontend/src/views/navigations/TestStyles.css
+++ b/frontend/src/views/navigations/TestStyles.css
@@ -48,7 +48,7 @@
     border-radius: 20px;
     overflow: hidden;
 }
-.Switch1 input,.Switch2 input{
+.Switch1>input,.Switch2>input{
     opacity: 0;
     height: 0;
     width: 0;
