--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,6 +28,15 @@ input:hover, textarea:hover {
   outline: none;
   border: none;
 }
+.Generated-avatar-container{
+  border: 2px solid black;
+  overflow: hidden;
+}
+.Generated-avatar-container>img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* Adjustments for various screen sizes */
 @media screen and (min-width: 900px) {
