--- a/frontend/src/layouts/Posts/PostStyles.css
+++ b/frontend/src/layouts/Posts/PostStyles.css
@@ -14,20 +14,25 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 60px;
     padding: 0px 5px 0px 5px;
+    height: 50px;
     width: 100%;
-    background-color: rgb(161, 161, 161);
+    background-color: rgb(201, 201, 201);
+}
+.Comment-box-2{
+    max-height: 30rem;
+    overflow-y: scroll;
 }
 .Comments-section>textarea{
     height: 40px;
     display: flex;
     align-items: center;
-    width: 16rem;
+    width: 90%;
     outline: none;
     border: none;
     background: transparent;
     padding-top: 9px;
+    margin-left: 5px;
 }
 .User-commenting{
     background: black;
@@ -43,6 +48,45 @@
 .User-face{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 50%; 
 }
+/* loader */
+.bouncing-loader {
+    display: flex;
+    align-items: center;
+  }
+  .bouncing-loader > div {
+    width: 4px;
+    height: 4px;
+    margin: 0px 2px;
+    border-radius: 50%;
+    background-color: #888787;
+    opacity: 1;
+    animation: bouncing-loader 0.9s 20 alternate;
+  }
+  @keyframes bouncing-loader {
+    to {
+      opacity: 0.1;
+      transform: translateX(-2px);
+      width: 9px;
+      height: 9px;
+    }
+  }
+  
+  .bouncing-loader > div:nth-child(2) {
+    animation-delay: 0.2s;
+    width: 6px;
+    height: 6px;
+  }
+  
+  .bouncing-loader > div:nth-child(3) {
+    animation-delay: 0.6s;
+    width: 8px;
+    height: 8px;
+  }
+  .bouncing-loader > div:nth-child(4) {
+    animation-delay: 0.8s;
+    width: 4px;
+    height: 4px;
+  }
