--- a/frontend/src/views/videos/VideoPlayer.css
+++ b/frontend/src/views/videos/VideoPlayer.css
@@ -1,9 +1,7 @@
 .video-container {
     width: 100vw;
-    height: 90vh;
-    margin: 0 auto;
+    height: 88vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -11,6 +9,8 @@
 }
 
 .video-container > video {
+    max-width: 100%;
+    min-height: 100%;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -20,7 +20,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(0%, -70%);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
 
