--- a/frontend/src/views/videos/VideoPlayer.css
+++ b/frontend/src/views/videos/VideoPlayer.css
@@ -9,12 +9,26 @@
 }
 
 .video-container > video {
+    position: absolute;
+    top: 0;
+    left: 0;
     max-width: 100%;
     min-height: 100%;
+    width: auto;
+    height: auto;
+}
+
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-position: center;
+    filter: blur(5px);
 }
+
 
 .controls {
     position: absolute;
