Vercel 404 page testing

--- a/frontend/src/views/videos/VideoPlayer.css
+++ b/frontend/src/views/videos/VideoPlayer.css
@@ -16,6 +16,8 @@
     min-height: 100%;
     width: auto;
     height: auto;
+    object-fit: contain;
+    object-position: center;
 }
 
 .background-video {
